--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div id="puzzle"></div>
     <div id="link">
         ¡Felicidades! Has armado el puzzle. Escucha el EP aquí: 
-        <a href="https://www.youtube.com/@MCnestesia" target="_blank">YouTube</a>
+        <a href="https://www.youtube.com/playlist?list=PLUlUNWRzIJwFl_3qZ2lTqnjlSTfs9EWTA" target="_blank">YouTube</a>
     </div>
 
     <script>
