--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             grid-template-rows: repeat(3, 1fr);
             gap: 2px;
             border: 2px solid #333;
-            touch-action: none;
             position: relative;
         }
         .piece {
@@ -46,10 +45,8 @@
             background-size: 300% 300%;
             cursor: grab;
             border: 1px solid #ddd;
+            position: relative;
             transition: transform 0.1s ease-out;
-            position: absolute;
-            top: 0;
-            left: 0;
             touch-action: none;
         }
         .dragging {
@@ -106,9 +103,6 @@
                 piece.className = 'piece';
                 piece.style.backgroundPosition = position;
                 piece.setAttribute('data-position', positions[index]);
-                piece.draggable = true;
-                piece.style.left = ${(index % 3) * 33.33}%;
-                piece.style.top = ${Math.floor(index / 3) * 33.33}%;
                 puzzle.appendChild(piece);
                 
                 piece.addEventListener('mousedown', handleDragStart);
@@ -157,16 +151,10 @@
         function handleDragEnd() {
             if (draggedPiece) {
                 draggedPiece.classList.remove('dragging');
-                draggedPiece.style.transform = ''; // Reseteamos la posición
+                draggedPiece.style.transform = '';
                 checkWin();
                 draggedPiece = null;
             }
-        }
-
-        function swapPieces(targetPiece) {
-            let tempBg = targetPiece.style.backgroundPosition;
-            targetPiece.style.backgroundPosition = draggedPiece.style.backgroundPosition;
-            draggedPiece.style.backgroundPosition = tempBg;
         }
 
         function checkWin() {
@@ -188,9 +176,6 @@
         }
 
         createPuzzle();
-    </script>
-</body>
-</html>
     </script>
 </body>
 </html>
