--- a/index.html
+++ b/index.html
@@ -4,28 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Puzzle Interactivo - Promoción EP</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <style>
+        :root {
+            --bg-color: #000;
+            --text-color: #fff;
+            --border-color: #333;
+            --gradient-1: #1a1a2e;
+            --gradient-2: #16213e;
+        }
+
         body {
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
             flex-direction: column;
             min-height: 100vh;
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
-            background-color: #000;
-            color: #fff;
+            color: var(--text-color);
             font-family: Arial, sans-serif;
+            transition: background-color 0.3s, color 0.3s;
+            background: #000; /* Update: Maintain black background */
+            animation: none; /* Update: Remove animation */
         }
+
+        body.light-theme {
+            --bg-color: #fff;
+            --text-color: #000;
+            --border-color: #ddd;
+            background: #fff; /* Update: Set white background for light theme */
+        }
+
+        /* Update: Removed @keyframes gradientBG */
+
         h1 {
             font-family: 'Georgia', 'Times New Roman', serif;
-            font-size: 2vw;
-            text-align: center;
-            margin: 20px 0;
-            line-height: 1.5;
+            font-size: 3vw; /* Aumentado de 2.5vw */
+            text-align: left; /* Changed from center */
+            margin: 50px 0 20px 0; /* Increased top margin */
+            line-height: 1.3;
             max-width: 90%;
+            opacity: 0;
+            animation: fadeIn 2s forwards; /* Update: Simplified animation */
+            white-space: normal; /* Update: Show full text */
+            overflow: visible; /* Update: Show full text */
         }
+
+        @keyframes fadeIn {
+            to { opacity: 1; }
+        }
+
+        /* Update: Removed @keyframes writeText */
+
+        .instructions {
+            font-size: 3vw;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
         #puzzle {
             width: 90vmin;
             height: 90vmin;
@@ -35,40 +73,89 @@
             grid-template-columns: repeat(3, 1fr);
             grid-template-rows: repeat(3, 1fr);
             gap: 2px;
-            border: 2px solid #333;
+            border: 2px solid var(--border-color);
             touch-action: none;
         }
+
         .piece {
             width: 100%;
             height: 100%;
             background-image: url('https://i.postimg.cc/nzbnfwXG/Portada-SER.jpg');
             background-size: 300% 300%;
-            cursor: grab;
-            border: 1px solid #ddd;
-            touch-action: none;
+            cursor: pointer;
+            border: 1px solid var(--border-color);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
-        .dragging {
-            opacity: 0.5;
+
+        .piece:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
+
+        .piece.selected {
+            transform: scale(1.1);
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+            z-index: 10;
+            animation: float 1s ease-in-out infinite alternate;
+        }
+
+        @keyframes float {
+            from { transform: translateY(0) scale(1.1); }
+            to { transform: translateY(-10px) scale(1.1); }
+        }
+
         #link {
             display: none;
             margin-top: 20px;
-            color: #fff;
+            color: var(--text-color);
             font-size: 4vw;
             text-align: center;
             max-width: 90%;
         }
+
         #link a {
             color: #4caf50;
             text-decoration: none;
             font-weight: bold;
         }
+
         #link a:hover {
             text-decoration: underline;
         }
+
+        #theme-toggle, #hint-button {
+            position: absolute;
+            background: none;
+            border: none;
+            color: var(--text-color);
+            font-size: 24px;
+            cursor: pointer;
+            padding: 5px;
+            transition: transform 0.3s ease;
+        }
+
+        #theme-toggle {
+            top: 10px;
+            right: 10px;
+        }
+
+        #hint-button {
+            top: 10px;
+            left: 10px;
+        }
+
+        #theme-toggle:hover, #hint-button:hover {
+            transform: scale(1.1);
+        }
+
+        /* Update: Removed #moves-counter styles */
+
         @media (min-width: 768px) {
             h1 {
-                font-size: 24px;
+                font-size: 16px; /* Aumentado de 14px */
+            }
+            .instructions {
+                font-size: 14px;
             }
             #link {
                 font-size: 18px;
@@ -77,16 +164,28 @@
     </style>
 </head>
 <body>
-    <h1>DICHOSOS LOS QUE ESCARBAN EN SU SER HASTA LLEGAR<br>Y NO LES ASUSTA LO QUE PUEDAN LLEGAR A ENCONTRAR.</h1>
+    <button id="theme-toggle" aria-label="Cambiar tema">
+        <i class="fas fa-adjust"></i>
+    </button>
+    <button id="hint-button" aria-label="Mostrar pista">
+        <i class="fas fa-lightbulb"></i>
+    </button>
+    <!-- Update: Removed moves-counter div -->
+    <h1>DICHOSOS LOS QUE ESCARBAN EN SU SER HASTA LLEGAR<br>Y NO LES ASUSTA LO QUE PUEDAN LLEGAR A ENCONTRAR</h1>
+    <p class="instructions">Toca una ficha y luego una posición en el tablero.</p>
     <div id="puzzle"></div>
     <div id="link">
         ¡Felicidades! Has armado el puzzle. Escucha el EP aquí: 
-        <a href="https://www.youtube.com/playlist?list=PLUlUNWRzIJwFl_3qZ2lTqnjlSTfs9EWTA" target="_blank">YouTube</a>
+        <a href="https://youtu.be/9etvwdYoPYI?si=u_FeMhi_-Oe3aW2P" target="_blank">YouTube</a>
     </div>
 
     <script>
         const puzzle = document.getElementById('puzzle');
         const link = document.getElementById('link');
+        const themeToggle = document.getElementById('theme-toggle');
+        const hintButton = document.getElementById('hint-button');
+        // Update: Removed movesCounter
+        // Update: Removed moves variable
         const positions = [
             '0% 0%', '50% 0%', '100% 0%',
             '0% 50%', '50% 50%', '100% 50%',
@@ -94,6 +193,8 @@
         ];
 
         let shuffledPositions = [...positions].sort(() => Math.random() - 0.5);
+        let selectedPiece = null;
+        // Update: Removed moves variable
 
         function createPuzzle() {
             shuffledPositions.forEach((position, index) => {
@@ -101,68 +202,32 @@
                 piece.className = 'piece';
                 piece.style.backgroundPosition = position;
                 piece.setAttribute('data-position', positions[index]);
-                piece.draggable = true;
+                piece.addEventListener('click', handlePieceClick);
                 puzzle.appendChild(piece);
-                
-                piece.addEventListener('mousedown', handleDragStart);
-                piece.addEventListener('touchstart', handleTouchStart, {passive: false});
             });
         }
 
-        let draggedPiece = null;
-        let startX, startY;
+        function handlePieceClick(e) {
+            const clickedPiece = e.target;
 
-        function handleDragStart(e) {
-            draggedPiece = e.target;
-            e.target.classList.add('dragging');
-        }
-
-        function handleTouchStart(e) {
-            e.preventDefault();
-            draggedPiece = e.target;
-            const touch = e.touches[0];
-            startX = touch.clientX - draggedPiece.offsetLeft;
-            startY = touch.clientY - draggedPiece.offsetTop;
-            draggedPiece.classList.add('dragging');
-        }
-
-        document.addEventListener('mousemove', handleDragMove);
-        document.addEventListener('touchmove', handleTouchMove, {passive: false});
-
-        function handleDragMove(e) {
-            e.preventDefault();
-            if (!draggedPiece) return;
-            const targetPiece = document.elementFromPoint(e.clientX, e.clientY);
-            if (targetPiece && targetPiece.classList.contains('piece') && targetPiece !== draggedPiece) {
-                swapPieces(targetPiece);
-            }
-        }
-
-        function handleTouchMove(e) {
-            e.preventDefault();
-            if (!draggedPiece) return;
-            const touch = e.touches[0];
-            const targetPiece = document.elementFromPoint(touch.clientX, touch.clientY);
-            if (targetPiece && targetPiece.classList.contains('piece') && targetPiece !== draggedPiece) {
-                swapPieces(targetPiece);
-            }
-        }
-
-        document.addEventListener('mouseup', handleDragEnd);
-        document.addEventListener('touchend', handleDragEnd);
-
-        function handleDragEnd() {
-            if (draggedPiece) {
-                draggedPiece.classList.remove('dragging');
+            if (selectedPiece === null) {
+                selectedPiece = clickedPiece;
+                clickedPiece.classList.add('selected');
+                playSound('select');
+            } else {
+                swapPieces(selectedPiece, clickedPiece);
+                selectedPiece.classList.remove('selected');
+                selectedPiece = null;
+                // Update: Removed moves increment and counter update
                 checkWin();
-                draggedPiece = null;
+                playSound('move');
             }
         }
 
-        function swapPieces(targetPiece) {
-            let tempBg = targetPiece.style.backgroundPosition;
-            targetPiece.style.backgroundPosition = draggedPiece.style.backgroundPosition;
-            draggedPiece.style.backgroundPosition = tempBg;
+        function swapPieces(piece1, piece2) {
+            const tempBg = piece1.style.backgroundPosition;
+            piece1.style.backgroundPosition = piece2.style.backgroundPosition;
+            piece2.style.backgroundPosition = tempBg;
         }
 
         function checkWin() {
@@ -180,8 +245,42 @@
 
             if (correct) {
                 link.style.display = 'block';
+                playSound('win');
             }
         }
+
+        function playSound(action) {
+            const audio = new Audio();
+            switch(action) {
+                case 'select':
+                    audio.src = 'https://example.com/select.mp3';
+                    break;
+                case 'move':
+                    audio.src = 'https://example.com/move.mp3';
+                    break;
+                case 'win':
+                    audio.src = 'https://example.com/win.mp3';
+                    break;
+            }
+            audio.play().catch(e => console.log("Audio play failed:", e));
+        }
+
+        themeToggle.addEventListener('click', () => {
+            document.body.classList.toggle('light-theme');
+        });
+
+        hintButton.addEventListener('click', () => {
+            const pieces = document.querySelectorAll('.piece');
+            pieces.forEach(piece => {
+                const correctPos = piece.getAttribute('data-position');
+                piece.style.backgroundPosition = correctPos;
+            });
+            setTimeout(() => {
+                pieces.forEach(piece => {
+                    piece.style.backgroundPosition = shuffledPositions[Array.from(pieces).indexOf(piece)];
+                });
+            }, 1000);
+        });
 
         createPuzzle();
     </script>
