--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div id="puzzle"></div>
     <div id="link">
         ¡Felicidades! Has armado el puzzle. Escucha el EP aquí: 
-        <a href="https://youtu.be/9etvwdYoPYI?si=u_FeMhi_-Oe3aW2P" target="_blank">YouTube</a>
+        <a href="https://www.youtube.com/watch?v=9etvwdYoPYI&list=PLUlUNWRzIJwFl_3qZ2lTqnjlSTfs9EWTA" target="_blank">YouTube</a>
     </div>
 
     <script>
