--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div id="puzzle"></div>
     <div id="link">
         ¡Felicidades! Has armado el puzzle. Escucha el EP aquí: 
-        <a href="https://youtube.com/playlist?list=PLUlUNWRzIJwFl_3qZ2lTqnjlSTfs9EWTA&si=7z9cmMPnJ8lUbYsQ" target="_blank">YouTube</a>
+        <a href="https://youtube.com/playlist?list=PLUlUNWRzIJwFl_3qZ2lTqnjlSTfs9EWTA&si=EeIPLbxvbMeM4aJf" target="_blank">YouTube</a>
     </div>
 
     <script>
