--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         h1 {
             font-family: 'Georgia', 'Times New Roman', serif;
             font-size: 5vw; /* Aumentado de 2.5vw */
-            text-align: left; /* Changed from center */
+            text-align: justify; /* Changed from center */
             margin: 50px 0 20px 0; /* Increased top margin */
             line-height: 1.3;
             max-width: 90%;
