--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             font-family: 'Georgia', 'Times New Roman', serif;
             font-size: 5vw; /* Aumentado de 2.5vw */
             text-align: justify; /* Changed from center */
-            margin: 50px 0 20px 0; /* Increased top margin */
+            margin: 50px auto 20px auto; /* Increased top margin */
             line-height: 1.3;
             max-width: 90%;
             opacity: 0;
